--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,6 @@
-# Используем официальный образ Node.js
 FROM node:18
-
-# Устанавливаем рабочую директорию
 WORKDIR /app
-
-# Копируем package.json и package-lock.json для установки зависимостей
 COPY package*.json ./
-
-# Устанавливаем зависимости
 RUN npm install
-
-# Копируем остальной код приложения
 COPY . .
-
-# Открываем порт 3000 для API
-EXPOSE 3000
-
-# Команда для запуска приложения
-CMD ["node", "server.js"]
+CMD ["sh", "-c", "sleep 10 && npm start"]
