--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ dist.zip
 
 # Node
 /node_modules
+/backend/node_modules
 npm-debug.log
 yarn-error.log
 
@@ -42,3 +43,5 @@ testem.log
 .DS_Store
 Thumbs.db
 package-lock.json
+
+.env
