--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,9 @@
             "outputPath": "dist/greenlab",
             "index": "src/index.html",
             "browser": "src/main.ts",
+            "allowedCommonJsDependencies": [
+              "leaflet"
+            ],
             "polyfills": [
               "zone.js"
             ],
